# PAT

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/patnormalizer/: CMakeLists.txt  patnormalizer.cpp
src/capi/: README.md  pat.c  pat.h  patimport.c  patimport.h
src/cppapi/: PAT.cpp  PAT.h  PAT.inl  PATConverters.cpp  PATConverters.h  PATExporter.cpp  PATExporter.h  PATImporter.cpp  PATImporter.h  README.md
tests/: CMakeLists.txt  PATAccessors.cpp  TestHelpers.cpp
tests/capi/: Accessors_c.c  CMakeLists.txt  CreateFree.c  Import_c.c  TestHelpers_c.c  TestHelpers_c.h  TreeModification_c.c
tests/cppapi/: Accessors.cpp  CMakeLists.txt  Converters.cpp  FileLoader.cpp  StreamLoader.cpp  TestHelpers.h
